# LiteCap

./: Cargo.toml  README.md  how.md
.github/workflows/: ci.yml  release.yml
src/: audio_net.rs  audio_win.rs  config.rs  ffmpeg.rs  icon.rs  main.rs  recorder.rs
src/capture/: mod.rs  wayland.rs  win.rs  x11.rs
