[package]
name = "litecap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.103"
crossbeam-channel = "0.5.16"
directories = "6.0.0"
env_logger = "0.11.11"
global-hotkey = "0.8.0"
log = "0.4.33"
notify-rust = "4.18.0"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.53", features = ["formatting", "local-offset", "macros"] }
toml = "1.1.3"
tray-icon = "0.24.1"
ureq = "3.3.0"

[profile.release]
lto = "thin"
opt-level = 3
strip = true
panic = "abort"

[target."cfg(windows)".dependencies]
cpal = "0.18.1"
tao = "0.35.3"
windows-capture = "2.0.0"
zip = "8.6.0"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.13.12"
gtk = "0.18.2"
pipewire = "0.10.0"
tar = "0.4.46"
thiserror = "2.0.18"
xz2 = "0.1.7"
